--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .env
 .terraform
-terraform.tfstate
-terraform.tfstate.backup
 .terraform.lock.hcl
+terraform.tf
+terraform.tfstate.backup
+terraform.tfstate
