feat: enable versioning for state bucket
Enables versioning for the S3 bucket used to store Terraform state. This ensures that state files are preserved even when modifications are unsuccessful.  Versioning is enabled on the bucket for disaster recovery and for ensuring that we have a record of all state changes made.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-.env
+*.tfstate
+*.tfstate.*
 .terraform
+**/.terraform/*
+.env
+*.tfvars
 .terraform.lock.hcl
-terraform.tf
-terraform.tfstate.backup
-terraform.tfstate
